# Plotcraft

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: ci.yml
src/plotcraft/: __init__.py  _compat.py  _types.py  _version.py
src/plotcraft/colors/: __init__.py  continuous.py  discrete.py  diverging.py  journal.py  palettes.py  utils.py
src/plotcraft/core/: aes.py  layer.py  options.py  plot.py  spec.py
src/plotcraft/data/: __init__.py  loader.py
src/plotcraft/data/datasets/: animals.csv  climate.csv  dinosaurs.csv  distributions.csv  energy.csv  eu_countries.csv  gene_expression.csv  pca.csv  spendings.csv  study.csv  time_course.csv
src/plotcraft/geoms/: bar.py  base.py  line.py  point.py
src/plotcraft/positions/: base.py  dodge.py  identity.py
src/plotcraft/render/: engine.py
src/plotcraft/scales/: base.py
src/plotcraft/stats/: aggregation.py  base.py  identity.py
src/plotcraft/themes/: base.py
tests/: conftest.py  test_aes.py  test_colors.py  test_compat.py  test_core.py  test_datasets.py  test_render.py  test_spec.py  test_themes.py
tests/test_geoms/: test_bar.py  test_line.py  test_point.py
tests/test_stats/: test_aggregation.py
