[project]
name = "plotcraft"
version = "0.1.0"
description = "Crafting publication-ready statistical graphics in Python"
readme = "README.md"
authors = [{ name = "KChennen", email = "kchennen@unistra.fr" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = ["matplotlib>=3.10.8", "polars>=1.38.1"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mpl>=0.18.0",
    "ruff>=0.15.5",
]

[project.optional-dependencies]
pandas = ["pandas>=3.0"]
bio = ["scipy>=1.14"]
test = ["pytest>=8.0", "pytest-mpl>=0.17", "pytest-cov>=5.0", "hypothesis>=6.0"]
docs = ["mkdocs>=1.6", "mkdocstrings[python]>=0.25", "mkdocs-material>=9.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/plotcraft"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "D", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# pandas is an optional dependency — stubs are not installed in the base env
module = "pandas.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "mpl_image_compare: visual regression test",
    "slow: marks tests as slow",
]
